AWSbasic.tf
provider "aws" {
    region = "us-east-1"
    access_key = ""
    secret_key = ""
}

#tbd

resource "aws_instance" "server-xyz" {
    
}
